--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Travelly is a travel agency website that helps you to pick your holiday vacation"/>
     <meta name="robots" content="index,follow"/>
-    <link rel="icon" href="/Project/icons/globe.png">
+    <link rel="icon" href="/icons/globe.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Poppins:wght@400;500&display=swap" rel="stylesheet">    <link rel="stylesheet" href="/style.css">
     <title>Travelly | Travelling Agency</title>
